apps/test-pod.yaml
# Description: This file contains the deployment and service configuration for the test-pod and test-svc respectively.
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-container
    image: busybox
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']

---
# Service to expose the pod
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: test-pod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
---
# Ingress to expose the service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 8080
